icon fixed, pagination wrap

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,10 +10,15 @@ header {
 
 .menu-container {
   margin-top: 45px;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 1024px) {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+  }
 }
 
 nav {
@@ -26,19 +31,22 @@ nav {
   font-weight: 900;
   font-size: 28px;
   line-height: 33px;
-  display: none;
   color: $color_white;
   margin-left: 7px;
 
-  @media screen and (min-width: 368px) {
-    display: block;
-  }
-
   &-link {
     text-decoration: none;
-    display: flex;
-    align-items: center;
+    text-align: center;
     color: $color_grey;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1024px) {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0;
+    }
 
     &:hover .bi-film {
       color: $color_orange;
@@ -54,6 +62,7 @@ nav {
 }
 
 .sign-in {
+  position: relative;
   font-family: $font_roboto;
   font-style: normal;
   font-weight: 500;
@@ -72,28 +81,35 @@ nav {
 }
 
 .main-search {
-  margin-top: 6px;
+  margin-top: 20px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
   width: 306px;
+
+  @media screen and (min-width: 1024px) {
+    margin-top: 55px;
+  }
 }
 
 .search-form {
   color: $color_white;
-
+  text-align: center;
   & input {
     background-color: rgba(0, 0, 0, 0.1);
     border: 0;
     border-bottom: 1px solid;
     border-bottom-color: $color_white;
-    width: 306px;
+    width: 200px;
     padding-right: 20px;
     transition: 1s;
     padding-left: 20px;
     padding-top: 20px;
     border-radius: 4px;
     color: $color_white;
+    @media screen and (min-width: 517px) {
+      width: 300px;
+    }
 
     &:focus {
       outline: none;
@@ -116,8 +132,11 @@ nav {
   & i {
     position: absolute;
     font-size: 14px;
-    right: 4px;
+    right: 60px;
     top: 23px;
+    @media screen and (min-width: 517px) {
+      right: 17px;
+    }
   }
 }
 
@@ -152,16 +171,14 @@ nav {
 
 .menu {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-
-  &-highlited {
-    background: rgba(202, 200, 200, 0.6);
-    height: 48px;
-    border-radius: 4px;
-    margin-bottom: 25px;
+  flex-wrap: wrap;
+  padding-right: 20px;
+  padding-left: 20px;
+  & a {
+    margin-left: 15px;
   }
 }
 
@@ -172,18 +189,20 @@ nav {
 .icon-user {
   padding-left: 8px;
   margin-right: 8px;
-  position: relative;
+  position: absolute;
+  right: 149px;
+  bottom: -1px;
 
   & .bi-circle-fill {
     color: $color_orange;
-    font-size: 20px;
+    font-size: 14px;
   }
 
   & .bi-person-fill {
     position: absolute;
-    right: 3px;
-    bottom: 3px;
-    font-size: 15px;
+    right: 2px;
+    bottom: 1px;
+    font-size: 10px;
   }
 }
 
